--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "skychain",
+  "name": "cryptoweather-nexus",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,18 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.6.1",
+    "autoprefixer": "^10.4.17",
+    "axios": "^1.6.7",
+    "chart.js": "^4.4.1",
+    "date-fns": "^3.3.1",
+    "next": "14.2.3",
+    "postcss": "^8.4.35",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "react-hot-toast": "^2.4.1",
+    "react-redux": "^9.1.0",
+    "redux-thunk": "^3.1.0",
+    "socket.io-client": "^4.7.4",
+    "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "@types/redux-thunk": "^2.1.0",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "eslint-config-next": "14.2.3",
+    "typescript": "^5"
   }
 }
