--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "axios": "^1.8.4",
     "chart.js": "^4.4.1",
     "date-fns": "^3.3.1",
+    "framer-motion": "^12.6.3",
     "next": "14.2.3",
     "postcss": "^8.4.35",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "redux-thunk": "^3.1.0",
     "socket.io-client": "^4.7.4",
